--- a/Portal.Server/appsettings.Development.json
+++ b/Portal.Server/appsettings.Development.json
@@ -14,5 +14,21 @@
     "Instance": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
     "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
     "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31"
+  },
+  "ApiSettings": {
+    "EnableSwagger": true,
+    "EnableDetailedErrors": true,
+    "EnableApiExplorer": true,
+    "StandaloneMode": true
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
   }
 }
