--- a/Migration/Migration.csproj
+++ b/Migration/Migration.csproj
@@ -27,5 +27,9 @@
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
-
+	<ItemGroup>
+		<None Update="database_schema.sql">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
 </Project>
