--- a/Portal.Shared/Portal.Shared.csproj
+++ b/Portal.Shared/Portal.Shared.csproj
@@ -10,4 +10,10 @@
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTO\Schedule\" />
+    <Folder Include="DTO\Notes\" />
+    <Folder Include="DTO\User\" />
+  </ItemGroup>
+
 </Project>
