--- a/Portal.Client/Portal.Client.csproj
+++ b/Portal.Client/Portal.Client.csproj
@@ -16,17 +16,11 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" PrivateAssets="all" Version="9.0.10" />
 		<PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="9.0.10" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="9.0.10" />
-		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.13.0" />
-		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.13.0" />
-		<PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.13.0" />
+		<PackageReference Include="MudBlazor" Version="8.14.0" />
 	</ItemGroup>
 
 	<ItemGroup>
 		<ServiceWorker Include="wwwroot\service-worker.js" PublishedContent="wwwroot\service-worker.published.js" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="Services\Interfaces\" />
 	</ItemGroup>
 
 </Project>
