--- a/Migration/appsettings.json
+++ b/Migration/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
         "MySQLConnection": "Server=localhost;port=3306;Database=prs_database;User Id=adminuser;Password=j4clas&P+e@4lv@zwvtB;TreatTinyAsBoolean=false;convert zero datetime=True;",
-        "PSQLConnection": "Host=localhost;Port=5432;Database=prs_rebuild_dev;Username=postgres;Password=145269;"
+        "PSQLConnection": "Host=localhost;Port=5433;Database=prs_database;Username=postgres;Password=145269;"
     }
 }
