--- a/Portal.Server/appsettings.json
+++ b/Portal.Server/appsettings.json
@@ -1,18 +1,17 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "AuthConnection": "Host=localhost;Port=5432;Database=prs_rebuild_dev;Username=postgres;Password=145269;Timeout=28800;",
-        "PrsConnection": "Host=localhost;Port=5432;Database=prs_rebuild_dev;Username=postgres;Password=145269;"
-    },
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
-        "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
-        "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PrsConnection": "Host=localhost;Port=5433;Database=prs_database;Username=postgres;Password=145269;"
+  },
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
+    "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
+    "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31"
+  }
 }
