--- a/Portal.Server/Portal.Server.csproj
+++ b/Portal.Server/Portal.Server.csproj
@@ -10,21 +10,19 @@
 		<ProjectReference Include="..\Portal.Shared\Portal.Shared.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.*" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.11" />
+		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
-		<PackageReference Include="Microsoft.Build" Version="18.0.2" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.11" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.*">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Microsoft.Identity.Web" Version="3.3.2" />
-		<PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.*" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="4.2.0" />
 		<PackageReference Include="Quartz.Extensions.Hosting" Version="3.15.1" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
-		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.*" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.11" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 		<PackageReference Include="Scalar.AspNetCore" Version="2.11.0" />
 	</ItemGroup>
