--- a/Portal.Server/appsettings.Development.json
+++ b/Portal.Server/appsettings.Development.json
@@ -21,6 +21,10 @@
     "EnableApiExplorer": true,
     "StandaloneMode": true
   },
+  "XeroSettings": {
+    "AccessToken": "",
+    "TenantId": ""
+  },
   "Kestrel": {
     "Endpoints": {
       "Http": {
