--- a/Portal.Server/appsettings.json
+++ b/Portal.Server/appsettings.json
@@ -12,6 +12,7 @@
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
     "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
-    "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31"
+    "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31",
+    "Audience": "api://26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9"
   }
 }
