--- a/Portal.Client/wwwroot/appsettings.json
+++ b/Portal.Client/wwwroot/appsettings.json
@@ -7,5 +7,8 @@
     "Authority": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
     "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
     "ValidateAuthority": true
+  },
+  "ApiSettings": {
+    "AuthRequired" :  false
   }
 }
