--- a/Portal.Server/appsettings.json
+++ b/Portal.Server/appsettings.json
@@ -10,7 +10,7 @@
     "PrsConnection": "Host=localhost;Port=5433;Database=prs_database;Username=postgres;Password=145269;"
   },
   "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31/",
+    "Instance": "https://login.microsoftonline.com/",
     "ClientId": "26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9",
     "TenantId": "3f0723ef-ae58-4ab8-8b75-e4a6e8eeee31",
     "Audience": "api://26b1d3cf-bc97-4c99-a5ec-bdda667e9fb9"
