--- a/Migration/appsettings.json
+++ b/Migration/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "MySQLConnection": "Server=localhost;port=3306;Database=prs_database;User Id=adminuser;Password=j4clas&P+e@4lv@zwvtB;TreatTinyAsBoolean=false;convert zero datetime=True;",
+    "MySQLConnection": "Server=localhost;port=3307;Database=prs;User Id=root;Password=145269;TreatTinyAsBoolean=false;convert zero datetime=True;",
+    //"MySQLConnection": "Server=localhost;port=3306;Database=prs_database;User Id=adminuser;Password=j4clas&P+e@4lv@zwvtB;TreatTinyAsBoolean=false;convert zero datetime=True;",
     "PSQLConnection": "Host=localhost;Port=5433;Database=prs_database;Username=postgres;Password=145269;Include Error Detail=true;"
   }
 }
