--- a/Portal.Client/Portal.Client.csproj
+++ b/Portal.Client/Portal.Client.csproj
@@ -19,6 +19,7 @@
 		<PackageReference Include="Microsoft.Authentication.WebAssembly.Msal" Version="10.0.2" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="10.0.2" />
 		<PackageReference Include="MudBlazor" Version="8.15.0" />
+		<PackageReference Include="MudExRichTextEditor" Version="8.14.0" />
 		<PackageReference Include="Toolbelt.Blazor.HotKeys2" Version="6.0.0" />
 	</ItemGroup>
 
