--- a/Portal.Server/appsettings.LocalDocker.json
+++ b/Portal.Server/appsettings.LocalDocker.json
@@ -8,7 +8,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PrsConnection": "Host=localhost;Port=5433;Database=prs_database;Username=postgres;Password=145269;"
+    // uses the internal Docker network to connect to the Postgres container
+    "PrsConnection": "Host=postgres;Port=5432;Database=prs_database;Username=postgres;Password=145269;"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
