--- a/Portal.Server/appsettings.Development.json
+++ b/Portal.Server/appsettings.Development.json
@@ -20,7 +20,8 @@
     "EnableSwagger": true,
     "EnableDetailedErrors": true,
     "EnableApiExplorer": true,
-    "StandaloneMode": true
+    "StandaloneMode": true,
+    "AuthRequired": true
   },
   "XeroSettings": {
     "AccessToken": "",
