--- a/Portal.Server/appsettings.Development.json
+++ b/Portal.Server/appsettings.Development.json
@@ -21,7 +21,7 @@
     "EnableDetailedErrors": true,
     "EnableApiExplorer": true,
     "StandaloneMode": true,
-    "AuthRequired": true
+    "AuthRequired": false
   },
   "XeroSettings": {
     "AccessToken": "",
