--- a/Portal.Server/appsettings.LocalDocker.json
+++ b/Portal.Server/appsettings.LocalDocker.json
@@ -30,10 +30,10 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://localhost:5000"
+        "Url": "http://+:9900"
       },
       "Https": {
-        "Url": "https://localhost:5001"
+        "Url": "https://+:9901"
       }
     }
   }
